--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "moment-jalaali": "^0.9.2",
+    "moment-timezone": "^0.5.33",
     "socket.io": "^4.0.1"
   },
   "devDependencies": {
